# PortalPlanner

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  index.html  portal_planner.js
.github/workflows/: builds.yml
assets/: gen_icon.sh  manifest.json  sw.js
proptest-regressions/: world.txt
resources/icon/: gen_icon.sh
src/: camera.rs  entity.rs  id.rs  main.rs  portal.rs  pos.rs  region.rs  threads.rs  util.rs  view.rs  world.rs
src/resources/text/: projectile.txt
src/text/: hover_either_dimension.txt  lock_portal_size.txt
