[package]
name = "portal_planner"
version = "0.1.0"
edition = "2024"

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }

assigning_clones = "allow"
comparison_chain = "allow"
manual_flatten = "allow"
doc_markdown = "warn"
if_then_some_else_none = "warn"
type_complexity = "allow"
manual_let_else = "warn"
match_like_matches_macro = "allow"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
stable_sort_primitive = "warn"
too_many_arguments = "allow"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unwrap_used = "warn"

multiple_crate_versions = { level = "allow", priority = 1 }

[dependencies]
eframe = { version = "0.32.1", features = ["persistence"] }
egui = "0.32.1"
egui_extras = { version = "0.32.1", features = ["svg"] }
egui_plot = "0.33.0"
env_logger = "0.11.8"
futures = "0.3.31"
itertools = "0.14.0"
log = "0.4.27"
oneshot = "0.1.11"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
smallvec = "1.15.1"
wasm_thread = "0.3.3"

[dev-dependencies]
proptest = "1.7.0"
